[gd_scene load_steps=7 format=2]

[ext_resource path="res://colworld.gd" type="Script" id=1]
[ext_resource path="res://TileSet.tres" type="TileSet" id=2]
[ext_resource path="res://Walls.gd" type="Script" id=3]
[ext_resource path="res://player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hat.tscn" type="PackedScene" id=5]
[ext_resource path="res://hat_cat_ears.png" type="Texture" id=6]

[node name="colworld" type="Node2D"]
show_behind_parent = true
script = ExtResource( 1 )

[node name="BaseWalls" type="TileMap" parent="."]
modulate = Color( 0.278431, 0.223529, 0.223529, 1 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 131098, 0, 0, 131099, 0, 0, 131100, 0, 0, 131101, 0, 0, 131102, 0, 0, 131103, 0, 0, 131104, 0, 0, 131105, 0, 0, 131106, 0, 0, 131107, 0, 0, 131108, 0, 0, 131109, 0, 0, 131110, 0, 0, 131111, 0, 0, 131112, 0, 0, 131113, 0, 0, 131114, 0, 0, 131115, 0, 0, 131116, 0, 0, 131117, 0, 0, 131118, 0, 0, 131119, 0, 0, 131120, 0, 0, 131121, 0, 0, 131122, 0, 0, 131123, 0, 0, 131124, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 196641, 0, 0, 196642, 0, 0, 196643, 0, 0, 196644, 0, 0, 196645, 0, 0, 196646, 0, 0, 196647, 0, 0, 196648, 0, 0, 196649, 0, 0, 196650, 0, 0, 196651, 0, 0, 196652, 0, 0, 196653, 0, 0, 196654, 0, 0, 196655, 0, 0, 196656, 0, 0, 196657, 0, 0, 196658, 0, 0, 196659, 0, 0, 196660, 0, 0, 262144, 0, 0, 262145, 0, 0, 262195, 0, 0, 262196, 0, 0, 327680, 0, 0, 327681, 0, 0, 327731, 0, 0, 327732, 0, 0, 393216, 0, 0, 393217, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 0, 393252, 0, 0, 393254, 0, 0, 393255, 0, 0, 393258, 0, 0, 393259, 0, 0, 393260, 0, 0, 393262, 0, 0, 393264, 0, 0, 393267, 0, 0, 393268, 0, 0, 458752, 0, 0, 458753, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458778, 0, 0, 458780, 0, 0, 458782, 0, 0, 458784, 0, 0, 458786, 0, 0, 458788, 0, 0, 458790, 0, 0, 458792, 0, 0, 458794, 0, 0, 458796, 0, 0, 458798, 0, 0, 458799, 0, 0, 458800, 0, 0, 458803, 0, 0, 458804, 0, 0, 524288, 0, 0, 524289, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 0, 524322, 0, 0, 524323, 0, 0, 524324, 0, 0, 524326, 0, 0, 524328, 0, 0, 524330, 0, 0, 524332, 0, 0, 524334, 0, 0, 524335, 0, 0, 524336, 0, 0, 524339, 0, 0, 524340, 0, 0, 589824, 0, 0, 589825, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589850, 0, 0, 589851, 0, 0, 589854, 0, 0, 589856, 0, 0, 589858, 0, 0, 589860, 0, 0, 589862, 0, 0, 589864, 0, 0, 589866, 0, 0, 589868, 0, 0, 589870, 0, 0, 589872, 0, 0, 589875, 0, 0, 589876, 0, 0, 655360, 0, 0, 655361, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655386, 0, 0, 655388, 0, 0, 655390, 0, 0, 655392, 0, 0, 655394, 0, 0, 655398, 0, 0, 655399, 0, 0, 655402, 0, 0, 655403, 0, 0, 655404, 0, 0, 655406, 0, 0, 655408, 0, 0, 655411, 0, 0, 655412, 0, 0, 720896, 0, 0, 720897, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720947, 0, 0, 720948, 0, 0, 786432, 0, 0, 786433, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786483, 0, 0, 786484, 0, 0, 851968, 0, 0, 851969, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851996, 0, 0, 851998, 0, 0, 852000, 0, 0, 852001, 0, 0, 852002, 0, 0, 852004, 0, 0, 852005, 0, 0, 852006, 0, 0, 852008, 0, 0, 852009, 0, 0, 852010, 0, 0, 852012, 0, 0, 852013, 0, 0, 852014, 0, 0, 852019, 0, 0, 852020, 0, 0, 917504, 0, 0, 917505, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917532, 0, 0, 917533, 0, 0, 917534, 0, 0, 917536, 0, 0, 917538, 0, 0, 917540, 0, 0, 917542, 0, 0, 917545, 0, 0, 917548, 0, 0, 917550, 0, 0, 917555, 0, 0, 917556, 0, 0, 983040, 0, 0, 983041, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983068, 0, 0, 983069, 0, 0, 983070, 0, 0, 983072, 0, 0, 983073, 0, 0, 983074, 0, 0, 983076, 0, 0, 983077, 0, 0, 983078, 0, 0, 983081, 0, 0, 983084, 0, 0, 983086, 0, 0, 983091, 0, 0, 983092, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048604, 0, 0, 1048606, 0, 0, 1048608, 0, 0, 1048610, 0, 0, 1048612, 0, 0, 1048613, 0, 0, 1048617, 0, 0, 1048620, 0, 0, 1048622, 0, 0, 1048627, 0, 0, 1048628, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114140, 0, 0, 1114142, 0, 0, 1114144, 0, 0, 1114146, 0, 0, 1114148, 0, 0, 1114150, 0, 0, 1114152, 0, 0, 1114153, 0, 0, 1114154, 0, 0, 1114156, 0, 0, 1114157, 0, 0, 1114158, 0, 0, 1114163, 0, 0, 1114164, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179699, 0, 0, 1179700, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245235, 0, 0, 1245236, 0, 0, 1310720, 0, 0, 1310721, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310732, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310739, 0, 0, 1310771, 0, 0, 1310772, 0, 0, 1376256, 0, 0, 1376257, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0, 1376268, 0, 0, 1376273, 0, 0, 1376274, 0, 0, 1376275, 0, 0, 1376276, 0, 0, 1376307, 0, 0, 1376308, 0, 0, 1441792, 0, 0, 1441793, 0, 0, 1441843, 0, 0, 1441844, 0, 0, 1507328, 0, 0, 1507329, 0, 0, 1507379, 0, 0, 1507380, 0, 0, 1572864, 0, 0, 1572865, 0, 0, 1572867, 0, 0, 1572869, 0, 0, 1572871, 0, 0, 1572872, 0, 0, 1572873, 0, 0, 1572875, 0, 0, 1572876, 0, 0, 1572877, 0, 0, 1572879, 0, 0, 1572880, 0, 0, 1572883, 0, 0, 1572884, 0, 0, 1572885, 0, 0, 1572887, 0, 0, 1572889, 0, 0, 1572891, 0, 0, 1572892, 0, 0, 1572893, 0, 0, 1572895, 0, 0, 1572896, 0, 0, 1572899, 0, 0, 1572901, 0, 0, 1572903, 0, 0, 1572904, 0, 0, 1572905, 0, 0, 1572907, 0, 0, 1572911, 0, 0, 1572912, 0, 0, 1572913, 0, 0, 1572915, 0, 0, 1572916, 0, 0, 1638400, 0, 0, 1638401, 0, 0, 1638403, 0, 0, 1638404, 0, 0, 1638405, 0, 0, 1638407, 0, 0, 1638411, 0, 0, 1638413, 0, 0, 1638415, 0, 0, 1638417, 0, 0, 1638420, 0, 0, 1638423, 0, 0, 1638425, 0, 0, 1638428, 0, 0, 1638431, 0, 0, 1638433, 0, 0, 1638435, 0, 0, 1638437, 0, 0, 1638439, 0, 0, 1638441, 0, 0, 1638443, 0, 0, 1638447, 0, 0, 1638451, 0, 0, 1638452, 0, 0, 1703936, 0, 0, 1703937, 0, 0, 1703939, 0, 0, 1703940, 0, 0, 1703941, 0, 0, 1703943, 0, 0, 1703944, 0, 0, 1703947, 0, 0, 1703948, 0, 0, 1703951, 0, 0, 1703953, 0, 0, 1703956, 0, 0, 1703959, 0, 0, 1703961, 0, 0, 1703964, 0, 0, 1703967, 0, 0, 1703969, 0, 0, 1703971, 0, 0, 1703973, 0, 0, 1703975, 0, 0, 1703976, 0, 0, 1703977, 0, 0, 1703979, 0, 0, 1703983, 0, 0, 1703984, 0, 0, 1703985, 0, 0, 1703987, 0, 0, 1703988, 0, 0, 1769472, 0, 0, 1769473, 0, 0, 1769475, 0, 0, 1769477, 0, 0, 1769479, 0, 0, 1769483, 0, 0, 1769484, 0, 0, 1769487, 0, 0, 1769489, 0, 0, 1769492, 0, 0, 1769495, 0, 0, 1769497, 0, 0, 1769500, 0, 0, 1769503, 0, 0, 1769505, 0, 0, 1769507, 0, 0, 1769509, 0, 0, 1769511, 0, 0, 1769513, 0, 0, 1769515, 0, 0, 1769521, 0, 0, 1769523, 0, 0, 1769524, 0, 0, 1835008, 0, 0, 1835009, 0, 0, 1835011, 0, 0, 1835013, 0, 0, 1835015, 0, 0, 1835016, 0, 0, 1835017, 0, 0, 1835019, 0, 0, 1835021, 0, 0, 1835023, 0, 0, 1835024, 0, 0, 1835027, 0, 0, 1835028, 0, 0, 1835029, 0, 0, 1835032, 0, 0, 1835035, 0, 0, 1835036, 0, 0, 1835037, 0, 0, 1835039, 0, 0, 1835040, 0, 0, 1835043, 0, 0, 1835044, 0, 0, 1835045, 0, 0, 1835047, 0, 0, 1835049, 0, 0, 1835051, 0, 0, 1835052, 0, 0, 1835053, 0, 0, 1835055, 0, 0, 1835056, 0, 0, 1835057, 0, 0, 1835059, 0, 0, 1835060, 0, 0, 1900544, 0, 0, 1900545, 0, 0, 1900595, 0, 0, 1900596, 0, 0, 1966080, 0, 0, 1966081, 0, 0, 1966082, 0, 0, 1966083, 0, 0, 1966084, 0, 0, 1966085, 0, 0, 1966086, 0, 0, 1966087, 0, 0, 1966088, 0, 0, 1966089, 0, 0, 1966090, 0, 0, 1966091, 0, 0, 1966092, 0, 0, 1966093, 0, 0, 1966094, 0, 0, 1966095, 0, 0, 1966096, 0, 0, 1966097, 0, 0, 1966098, 0, 0, 1966099, 0, 0, 1966100, 0, 0, 1966101, 0, 0, 1966102, 0, 0, 1966103, 0, 0, 1966104, 0, 0, 1966105, 0, 0, 1966106, 0, 0, 1966107, 0, 0, 1966108, 0, 0, 1966109, 0, 0, 1966110, 0, 0, 1966111, 0, 0, 1966112, 0, 0, 1966113, 0, 0, 1966114, 0, 0, 1966115, 0, 0, 1966116, 0, 0, 1966117, 0, 0, 1966118, 0, 0, 1966119, 0, 0, 1966120, 0, 0, 1966121, 0, 0, 1966122, 0, 0, 1966123, 0, 0, 1966124, 0, 0, 1966125, 0, 0, 1966126, 0, 0, 1966127, 0, 0, 1966128, 0, 0, 1966129, 0, 0, 1966130, 0, 0, 1966131, 0, 0, 1966132, 0, 0, 2031616, 0, 0, 2031617, 0, 0, 2031618, 0, 0, 2031619, 0, 0, 2031620, 0, 0, 2031621, 0, 0, 2031622, 0, 0, 2031623, 0, 0, 2031624, 0, 0, 2031625, 0, 0, 2031626, 0, 0, 2031627, 0, 0, 2031628, 0, 0, 2031629, 0, 0, 2031630, 0, 0, 2031631, 0, 0, 2031632, 0, 0, 2031633, 0, 0, 2031634, 0, 0, 2031635, 0, 0, 2031636, 0, 0, 2031637, 0, 0, 2031638, 0, 0, 2031639, 0, 0, 2031640, 0, 0, 2031641, 0, 0, 2031642, 0, 0, 2031643, 0, 0, 2031644, 0, 0, 2031645, 0, 0, 2031646, 0, 0, 2031647, 0, 0, 2031648, 0, 0, 2031649, 0, 0, 2031650, 0, 0, 2031651, 0, 0, 2031652, 0, 0, 2031653, 0, 0, 2031654, 0, 0, 2031655, 0, 0, 2031656, 0, 0, 2031657, 0, 0, 2031658, 0, 0, 2031659, 0, 0, 2031660, 0, 0, 2031661, 0, 0, 2031662, 0, 0, 2031663, 0, 0, 2031664, 0, 0, 2031665, 0, 0, 2031666, 0, 0, 2031667, 0, 0, 2031668, 0, 0 )
script = ExtResource( 3 )

[node name="MaleWalls" type="TileMap" parent="."]
modulate = Color( 0.0431373, 0.101961, 0.698039, 1 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 1441811, 0, 0, 1441812, 0, 0, 1507347, 0, 0, 1507348, 0, 0, 1638419, 0, 0, 1703955, 0, 0, 1769491, 0, 0, 1900563, 0, 0, 1900564, 0, 0 )
script = ExtResource( 3 )

[node name="FemaleWalls" type="TileMap" parent="."]
modulate = Color( 1, 0.482353, 0.992157, 1 )
position = Vector2( -1, 0 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 917551, 0, 0, 917552, 0, 0, 917553, 0, 0, 917554, 0, 0, 983087, 0, 0, 983088, 0, 0, 983089, 0, 0, 983090, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1179688, 0, 0, 1179689, 0, 0, 1245224, 0, 0, 1245225, 0, 0, 1310760, 0, 0, 1310761, 0, 0, 1376296, 0, 0, 1376297, 0, 0, 1441832, 0, 0, 1441833, 0, 0, 1507368, 0, 0, 1507369, 0, 0 )
script = ExtResource( 3 )

[node name="player" parent="." instance=ExtResource( 4 )]
position = Vector2( 107.243, 219.134 )

[node name="Camera2D" type="Camera2D" parent="player"]
rotating = true
current = true

[node name="Hat" parent="." instance=ExtResource( 5 )]
position = Vector2( 100.5, 328.5 )
color = Color( 0.0745098, 0.160784, 0.721569, 1 )
removes = "MaleWalls"

[node name="Area2D" parent="." instance=ExtResource( 5 )]
position = Vector2( 355.5, 102 )
color = Color( 0.870588, 0.282353, 0.87451, 1 )
sprite = ExtResource( 6 )
removes = "FemaleWalls"
